--- a/Parallelism/libraries.ipynb
+++ b/Parallelism/libraries.ipynb
@@ -83,6 +83,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install pytube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from pytube import YouTube\n",
     "from IPython.display import Image"
    ]
